--- a/templates/app/operation_system_app_index.html
+++ b/templates/app/operation_system_app_index.html
@@ -25,7 +25,7 @@
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/moment@2.16.0/moment.min.js"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/moment@2.16.0/locale/zh-cn.js"></script>
 
-<script type="text/javascript" src="/static/dist/operation-system.entry.min.js"></script>
+<script type="text/javascript" src="/static/dist/operation-system.entry.js"></script>
 
 </body>
 
