:boom: change api routes. #1

--- a/templates/app/hpc_app_index.html
+++ b/templates/app/hpc_app_index.html
@@ -28,7 +28,7 @@
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/moment@2.16.0/locale/zh-cn.js"></script>
 
 <script type="text/javascript" src="//res.wx.qq.com/open/libs/weuijs/1.1.1/weui.min.js"></script>
-<script type="text/javascript" src="/static/dist/hpc.entry.min.js"></script>
+<script type="text/javascript" src="/static/dist/hpc.entry.js"></script>
 
 </body>
 
