--- a/templates/app/welcome_app_index.html
+++ b/templates/app/welcome_app_index.html
@@ -27,7 +27,7 @@
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/moment@2.16.0/locale/zh-cn.js"></script>
 
 <script type="text/javascript" src="//res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
-<script type="text/javascript" src="/static/dist/welcome.entry.min.js"></script>
+<script type="text/javascript" src="/static/dist/welcome.entry.js"></script>
 
 </body>
 
