--- a/templates/app/welcome_app_index.html
+++ b/templates/app/welcome_app_index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
-    <title>NWPC 业务运行监控</title>
+    <title>风中飞舞</title>
     <link type="text/css" href="//res.wx.qq.com/open/libs/weui/1.0.1/weui.min.css" rel="stylesheet" />
     <link type="text/css" href="/static/css/main.css" rel="stylesheet" />
 
